--- a/deno.json
+++ b/deno.json
@@ -3,7 +3,7 @@
     "$std/": "https://deno.land/std@0.204.0/"
   },
   "tasks": {
-    "run": "APP_ENV=production deno run src/main.ts",
+    "start": "APP_ENV=production deno run --allow-all src/server.ts",
     "dev": "APP_ENV=development deno run --allow-read --allow-net --allow-env --allow-write --watch src/server.ts",
     "docker:dev": "docker-compose -f ./docker/docker-compose.yml up -d"
   }
