--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: vdt-csv-profile-service
     build:
       context: .
-      dockerfile: ../Dockerfile
+      dockerfile: ./Dockerfile
     ports:
       - "5000:8080"
     volumes:
