--- a/src/environments/development.env
+++ b/src/environments/development.env
@@ -1,9 +1,9 @@
 #DB MYSQL
-DB_HOST=
-DB_NAME=
-MYSQL_USER=
-MYSQL_PASSWORD=
-MYSQL_ROOT_PASSWORD=
+DB_HOST=db
+MYSQL_DATABASE=csvprofile
+MYSQL_USER=admin
+MYSQL_PASSWORD=p@a55w0rd
+MYSQL_ROOT_PASSWORD=p@a55w0rd
 
 #AWS
 AWS_ACCESS_KEY_ID=
