--- a/src/environments/development.env
+++ b/src/environments/development.env
@@ -1,3 +1,6 @@
+#APP
+PORT=5001
+
 #DB MYSQL
 DB_HOST=db
 MYSQL_DATABASE=csvprofile
@@ -6,7 +9,7 @@ MYSQL_PASSWORD=p@a55w0rd
 MYSQL_ROOT_PASSWORD=p@a55w0rd
 
 #AWS
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
+AWS_ACCESS_KEY_ID=fakeAccessKeyId
+AWS_SECRET_ACCESS_KEY=fakeSecretAccessKey
 AWS_REGION="us-east-1"
-S3_BUCKET_NAME=
+S3_BUCKET_NAME=person
