--- a/src/environments/production.env
+++ b/src/environments/production.env
@@ -1,12 +1,15 @@
+#APP
+PORT=5001
+
 #DB MYSQL
-DB_HOST=
-MYSQL_DATABASE=
-MYSQL_USER=
-MYSQL_PASSWORD=
-MYSQL_ROOT_PASSWORD=
+DB_HOST=db
+MYSQL_DATABASE=csvprofile
+MYSQL_USER=admin
+MYSQL_PASSWORD=p@a55w0rd
+MYSQL_ROOT_PASSWORD=p@a55w0rd
 
 #AWS
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
+AWS_ACCESS_KEY_ID=fakeAccessKeyId
+AWS_SECRET_ACCESS_KEY=fakeSecretAccessKey
 AWS_REGION="us-east-1"
-S3_BUCKET_NAME=
+S3_BUCKET_NAME=person
