feat(localstack) configure localstack to the project

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,16 +40,16 @@ services:
       - "127.0.0.1:4566:4566"            # LocalStack Gateway
       - "127.0.0.1:4510-4559:4510-4559"  # external services port range
     environment:
-      - DEBUG=${DEBUG-}
+      - DEBUG=1
       - AWS_DEFAULT_REGION=sa-east-1
+      - PORT_WEB_UI=8082
+      - HOSTNAME_EXTERNAL=localhost
       - AWS_ACCESS_KEY_ID=fakeAccessKeyId
       - AWS_SECRET_ACCESS_KEY=fakeSecretAccessKey
-      - AKID=fakeAccessKeyId
       - DEFAULT_REGION=sa-east-1
       - DOCKER_HOST=unix:///var/run/docker.sock
       - SREVICES=s3,sns,sqs,ses
       - EDGE_PORT=4566
-      - LOCALSTACK_API_KEY=3oGpLxt9DD
     volumes:
       - "${LOCALSTACK_VOLUME_DIR:-./volume}:/var/lib/localstack"
       - "/var/run/docker.sock:/var/run/docker.sock"
