--- a/src/environments/development.env
+++ b/src/environments/development.env
@@ -2,7 +2,7 @@
 PORT=5001
 
 #DB MYSQL
-DB_HOST=localhost
+DB_HOST=db
 MYSQL_DATABASE=csvprofile
 MYSQL_USER=admin
 MYSQL_PASSWORD=p@a55w0rd
@@ -13,4 +13,4 @@ AWS_ACCESS_KEY_ID=fakeAccessKeyId
 AWS_SECRET_ACCESS_KEY=fakeSecretAccessKey
 AWS_REGION="us-east-1"
 S3_BUCKET_NAME=person
-AWS_ENDPOINT="http://localhost:4566/health"
+AWS_ENDPOINT="http://127.0.0.1:4566/health/"
