--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,12 +30,13 @@ services:
       - MYSQL_ROOT_PASSWORD=p@a55w0rd
       - MYSQL_DATABASE=csvprofile
     volumes:
-      - .docker/dbdata:/var/www/html
+      - .docker/dbdata:/var/lib/mysql
 
   localstack:
     container_name: aws-localstack
     image: localstack/localstack
     network_mode: bridge
+    restart: always
     ports:
       - "127.0.0.1:4566:4566"            # LocalStack Gateway
       - "127.0.0.1:4510-4559:4510-4559"  # external services port range
