feat(SQS): init SQS hadler to create queue, send message and receipt the message

--- a/src/environments/local.env
+++ b/src/environments/local.env
@@ -12,5 +12,6 @@ MYSQL_ROOT_PASSWORD=p@a55w0rd
 AWS_ACCESS_KEY_ID=fakeAccessKeyId
 AWS_SECRET_ACCESS_KEY=fakeSecretAccessKey
 AWS_REGION="us-east-1"
-S3_BUCKET_NAME=person
 AWS_ENDPOINT="http://127.0.0.1:4566/person"
+S3_BUCKET_NAME=person
+SQS_QUEUE_NAME=xpto
