--- a/src/environments/production.env
+++ b/src/environments/production.env
@@ -12,5 +12,6 @@ MYSQL_ROOT_PASSWORD=p@a55w0rd
 AWS_ACCESS_KEY_ID=fakeAccessKeyId
 AWS_SECRET_ACCESS_KEY=fakeSecretAccessKey
 AWS_REGION="us-east-1"
-S3_BUCKET_NAME=person
 AWS_ENDPOINT="http://localhost:4566/health"
+S3_BUCKET_NAME=person
+SQS_QUEUE_NAME=xpto
