feat(command): add a command to execut cron jobs with running deno task command:local

--- a/deno.json
+++ b/deno.json
@@ -1,28 +1,11 @@
 {
-  "imports": {
-    "$common": "./src/common/index.ts",
-    "$deps": "./src/deps/index.ts",
-    "$controllers": "./src/api/modules/v1/controllers/index.ts",
-    "$controller/": "./src/api/modules/v1/controllers/",
-    "$services": "./src/api/modules/v1/services/index.ts",
-    "$service/": "./src/api/modules/v1/services/",
-    "$repositories": "./src/api/modules/v1/repository/index.ts",
-    "$repository/": "./src/api/modules/v1/repository/",
-    "$components": "./src/api/modules/v1/components/index.ts",
-    "$component/": "./src/api/modules/v1/components/",
-    "$middlewares": "./src/api/middlewares/index.ts",
-    "$models": "./src/api/modules/v1/models/index.ts",
-    "$interfaces": "./src/common/interfaces/index.ts",
-    "$enums": "./src/common/enums/index.ts",
-    "$migrations": "./src/api/db/migrations/index.ts",
-    "$routes": "./src/api/modules/v1/routes/index.ts",
-    "$db": "./src/api/db/index.ts"
-  },
+  "importMap": "./import_map.json",
   "tasks": {
     "start": "APP_ENV=production deno run --allow-all src/main.ts",
     "dev": "APP_ENV=development deno run --allow-all --watch src/main.ts",
     "local": "APP_ENV=local deno run --allow-all --watch src/main.ts",
-    "docker:dev": "docker-compose -f ./docker/docker-compose.yml up -d"
+    "docker:dev": "docker-compose -f ./docker/docker-compose.yml up -d",
+    "command:local": "APP_ENV=local deno run --allow-all --watch src/main.ts --slinger"
   },
   "allow-net": "0.0.0.0:5001",
   "allow-read": "."
